@@ -15,6 +15,8 @@ Changelog:
 - document missing ActiveBall global call
 - add PullBackandRetract to the plunger element that can be used instead of PullBack in the KeyDown Sub.
   The plunger will move forth and back between the maximum and minimum position, allowing for a retry, if the desired firing position has been missed.
+- add ElasticityFalloff to the wall properties
+
 10.6:
 - add UpdateMaterial to the globals
 - fix potential problems for the light element for Bulb, ImageMode, ShowBulbMesh, StaticBulbMesh, ShowReflectionOnBall reads
@@ -784,6 +786,7 @@ IsBottomSolid(bool)
 IsDropped(bool)
 *DisplayTexture(bool)
 Elasticity(float)
+ElasticityFalloff(float)
 *SideImage(string)
 *Visible(bool)
 Disabled(bool)
