@@ -999,7 +999,7 @@ BEGIN
     EDITTEXT        8,66,229,52,12,ES_AUTOHSCROLL
 END
 
-IDD_PROPWALL_PHYSICS DIALOGEX 0, 0, 125, 163
+IDD_PROPWALL_PHYSICS DIALOGEX 0, 0, 125, 177
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
@@ -1008,21 +1008,23 @@ BEGIN
     EDITTEXT        14,78,30,40,12,ES_AUTOHSCROLL
     EDITTEXT        427,78,44,40,12,ES_AUTOHSCROLL
     EDITTEXT        IDC_ELASTICITY_EDIT,78,98,40,12,ES_AUTOHSCROLL
-    EDITTEXT        IDC_FRICTION_EDIT,78,112,40,12,ES_AUTOHSCROLL
-    EDITTEXT        IDC_SCATTER_ANGLE_EDIT,78,125,40,12,ES_AUTOHSCROLL
-    CONTROL         "Can &Drop",11,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,140,53,10
-    CONTROL         "Collidable",IDC_COLLIDABLE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,77,140,42,10
-    CONTROL         "Is Bottom Collidable",116,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,151,83,10
+    EDITTEXT        IDC_FRICTION_EDIT,78,124,40,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_SCATTER_ANGLE_EDIT,78,137,40,12,ES_AUTOHSCROLL
+    CONTROL         "Can &Drop",11,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,152,53,10
+    CONTROL         "Collidable",IDC_COLLIDABLE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,77,152,42,10
+    CONTROL         "Is Bottom Collidable",116,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,163,83,10
     LTEXT           "Hit Threshol&d",IDC_STATIC,7,17,70,8
     LTEXT           "Slingshot &Force",IDC_STATIC,7,32,69,8
     LTEXT           "&Elasticity",IDC_STATIC,7,100,69,8
     LTEXT           "Slingshot Threshold",IDC_STATIC,7,46,70,8
-    LTEXT           "&Friction",IDC_STATIC,7,114,69,8
-    LTEXT           "&Scatter Angle",IDC_STATIC,7,127,69,8
+    LTEXT           "&Friction",IDC_STATIC,7,126,69,8
+    LTEXT           "&Scatter Angle",IDC_STATIC,7,139,69,8
     COMBOBOX        IDC_MATERIAL_COMBO4,6,70,111,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Overwrite Material Settings",IDC_OVERWRITE_MATERIAL_SETTINGS,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,85,100,10
     LTEXT           "Physics Material",IDC_STATIC,6,60,52,8
+    EDITTEXT        120,78,111,40,12,ES_AUTOHSCROLL
+    LTEXT           "Elasticity Falloff",IDC_STATIC,7,113,63,8
 END
 
 IDD_PROPGATE_VISUALS DIALOGEX 0, 0, 125, 250
@@ -2450,6 +2452,7 @@ BEGIN
 
     IDD_PROPWALL_PHYSICS, DIALOG
     BEGIN
+        BOTTOMMARGIN, 163
     END
 
     IDD_PROPGATE_VISUALS, DIALOG
